action popup not showing correctly

--- a/ext/css/action-popup.css
+++ b/ext/css/action-popup.css
@@ -33,6 +33,7 @@ body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: var(--font-size);
+    width: fit-content;
 }
 
 h3 {
